# learningfoundry

./: .gitignore  .project-guide.yml  CHANGELOG.md  README.md  conda-lock.yml  environment.yml  pyproject.toml  requirements-dev.txt
.github/workflows/: ci.yml  publish.yml
.pyve/: config
docs/project-guide/: go.md
docs/specs/: concept.md  d802-curriculum-idea-statement.md  features.md  future-testing-infra-plan.md  idea.md  phase-I-progress-ux-subplan.md  project-essentials.md  quizazz-README.md  sql-js-wasm-robustness.md  stories.md  tech-spec.md
docs/specs/.archive/: stories-v0.36.0.md
docs/specs/d3foundry/: dependency-spec.md
docs/specs/lmentry/: features.md
docs/specs/nbfoundry/: dependency-spec.md
docs/specs/quizazz/: concept.md  dependency-spec.md
scripts/: spike_e2e.py
scripts/fixtures/: spike-curriculum.yml
scripts/fixtures/content/: lesson-01.md
src/learningfoundry/: __init__.py  __main__.py  asset_resolver.py  cli.py  config.py  exceptions.py  generator.py  logging_config.py  parser.py  pipeline.py  resolver.py  schema_v1.py
src/learningfoundry/integrations/: d3foundry_stub.py  nbfoundry_stub.py  protocols.py  quizazz.py
src/learningfoundry/sveltekit_template/: package.json  playwright.config.ts  pnpm-lock.yaml  vite.config.ts
src/learningfoundry/sveltekit_template/e2e/: README.md  global-teardown.ts  lifecycle.spec.ts  navigation.spec.ts  progress.spec.ts  reset.spec.ts  text-block-bottom.spec.ts  video.spec.ts
src/learningfoundry/sveltekit_template/src/: app.css
src/learningfoundry/sveltekit_template/test-results/: .last-run.json
sveltekit_template/: package.json  playwright.config.ts  pnpm-lock.yaml  svelte.config.js  vite.config.ts
sveltekit_template/e2e/: finish.spec.ts  progress.spec.ts  text-block-bottom.spec.ts
sveltekit_template/src/: app.css
sveltekit_template/src/lib/components/: LessonList.svelte  LessonView.svelte  LessonView.test.ts  ModuleList.svelte  PlaceholderBlock.svelte  ProgressBar.svelte  ProgressDashboard.svelte  QuizBlock.svelte  ResetCourseButton.svelte  ResetCourseButton.test.ts  TextBlock.svelte  TextBlock.test.ts  VideoBlock.svelte  VisualizationBlock.svelte  lesson-view.helpers.ts  module-list.test.ts  mount.test.ts  navigation.test.ts
sveltekit_template/src/lib/db/: progress.test.ts  progress.ts
sveltekit_template/src/lib/stores/: curriculum.ts  progress.ts
sveltekit_template/src/lib/types/: index.ts
sveltekit_template/src/lib/utils/: progress.test.ts  progress.ts
sveltekit_template/src/routes/: +layout.svelte  +page.svelte  layout.test.ts
tests/: conftest.py  test_asset_resolver.py  test_cli.py  test_config.py  test_edge_cases.py  test_exceptions.py  test_generator.py  test_parser.py  test_pipeline.py  test_resolver.py  test_schema_v1.py  test_smoke_sveltekit.py
tests/fixtures/: valid-curriculum.yml
tests/test_integrations/: test_d3foundry_stub.py  test_nbfoundry_stub.py  test_quizazz.py
(+63 files in other folders)
